[package]
name = "ddb-session-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
http = "0.2.8"
serde = "^1"
serde_json = "^1.0"
alt_serde_derive = "^1.0"
log = "0.4"
simple_logger = "2.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
lambda_runtime = "0.6.0"
uuid = { version = "1.1.2", features = ["v4"] }
aws_lambda_events = "0.6.3"
aws-config = "0.48.0"
aws-sdk-dynamodb = "0.18.0"
lambda_http = { version = "0.6", features = ["apigw_http", "alb"], default-features = false }
chrono = "0.4"
lazy_static = "1.4.0"
matchit = "0.6.0"
aws-smithy-types = "0.48.0"